fix z-index navigation on mobile

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -10,6 +10,7 @@
     position: absolute;
     bottom: 100%;
     left: 0;
+    z-index: 10;
     width: 100%;
     height: 100vh;
 
